OpenJMLTest/test/escRecursiveInvariantMQ/expected
test\escRecursiveInvariantMQ\RecursiveInvariantMQ.java:4: error: Recursive attempt to assert or assume invariants - use pure helper methods: RecursiveInvariantMQ
    //@ public invariant m();
                          ^
Proving methods in RecursiveInvariantMQ
Starting proof of RecursiveInvariantMQ.RecursiveInvariantMQ() with prover !!!!
test\escRecursiveInvariantMQ\RecursiveInvariantMQ.java:4: warning: The prover cannot establish an assertion (InvariantEntrance) in method RecursiveInvariantMQ:  (Caller: RecursiveInvariantMQ.RecursiveInvariantMQ(), Callee: RecursiveInvariantMQ.m())
    //@ public invariant m();
                          ^
test\escRecursiveInvariantMQ\RecursiveInvariantMQ.java:4: warning: Associated declaration
    //@ public invariant m();
               ^
test\escRecursiveInvariantMQ\RecursiveInvariantMQ.java:2: warning: The prover cannot establish an assertion (InvariantExit) in method RecursiveInvariantMQ
public class RecursiveInvariantMQ {
       ^
test\escRecursiveInvariantMQ\RecursiveInvariantMQ.java:4: warning: Associated declaration
    //@ public invariant m();
               ^
Completed proof of RecursiveInvariantMQ.RecursiveInvariantMQ() with prover !!!! - with warnings
Starting proof of RecursiveInvariantMQ.m() with prover !!!!
Feasibility check #1 - end of preconditions : OK
Feasibility check #2 - at program exit : OK
Completed proof of RecursiveInvariantMQ.m() with prover !!!! - no warnings
Starting proof of RecursiveInvariantMQ.t() with prover !!!!
test\escRecursiveInvariantMQ\RecursiveInvariantMQ.java:9: warning: The prover cannot establish an assertion (InvariantExit) in method t
    public void t() {}
                ^
test\escRecursiveInvariantMQ\RecursiveInvariantMQ.java:4: warning: Associated declaration
    //@ public invariant m();
               ^
Completed proof of RecursiveInvariantMQ.t() with prover !!!! - with warnings
Completed proving methods in RecursiveInvariantMQ
1 error
6 warnings
